tests/ui/compile-fail/init/tuple_wrong_generics.rs
use pin_init::*;

struct Foo<T>(T);

fn main() {
    let _ = init!(Foo<()> {
        0 <- (),
    });
}
